# Copilot-CLI

./: .checkpoint-swe-bench-lite.json  .dockerignore  .env.example  .gitignore  ACTION_PLAN.md  BENCHMARK_AGENT_EVALUATION.md  BENCHMARK_TEST_READY.md  BUDGET_FIXES_SUMMARY.md  BUGFIX_SUMMARY.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.md  FILE_UPLOAD_PERMISSIONS_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LLM_TIMING_DEEP_DIVE.md  MEMORY_SUPERSESSION.md  PROGRESS.md  QDP_FIX_SUMMARY.md  QUANTIFIER_PATTERNS_REFERENCE.md  README.md  RECURSIVE_BREAKDOWN_IMPLEMENTATION.md  SETUP_INSTRUCTIONS.md  SLOWDOWN_ANALYSIS.md  SUBAGENT_IMPLEMENTATION_SUMMARY.md  SUBAGENT_QUICK_REFERENCE.md  TASK_2.1.6_COMPLETION_REPORT.md  TASK_2.2.1_COMPLETION_REPORT.md  TASK_2.2.1_IMPLEMENTATION_SUMMARY.md  TASK_2.2.1_SUMMARY.md  TASK_2.2.2_IMPLEMENTATION_SUMMARY.md  TASK_PLANNING_GUIDE.md  TIMING_ANALYSIS.md  TRACKING_ITEM_DETECTION_ANALYSIS.md  WORK_COMPLETED_SUMMARY.md  agent-result.json  agent-results.json  debug-explorer-flow.ts  debug-iteration-timing.js  debug-jsonl.js  (+43 more)
.claude/: settings.local.json
testbox/GLM/: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION.md  README.md  config.yaml  docker-compose.yml  prometheus.yml
testbox/GLM/config/: node1.yaml  node2.yaml  node3.yaml
testbox/GLM/docs/: api.md  architecture.md  deployment.md
testbox/GLM/examples/: handlers.rs
testbox/GLM/proto/: task_queue.proto
testbox/GLM/task-queue-admin/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  test_commands.sh
testbox/GLM/task-queue-admin/src/: main.rs
testbox/GLM/task-queue-api/: Cargo.toml  build.rs
testbox/GLM/task-queue-api/src/: grpc.rs  lib.rs  models.rs  rest.rs
testbox/GLM/task-queue-broker/: ACTUAL_TASK_STATUS.md  COMPLETION_REPORT.md  Cargo.toml  DEFINITIVE_FINAL_REPORT.txt  DEFNITIVE_STATUS.md  FINAL_CLARIFICATION.md  FINAL_CONFIRMATION.txt  FINAL_STATEMENT.md  FINAL_VERIFICATION.md  FINAL_WORK_SUMMARY.md  FIX_ISSUE.md  IMPLEMENTATION_SUMMARY.md  NO_REMAINING_WORK.txt  README.md  TASK_COMPLETION_REPORT.md  TRACKING_ITEMS_ANALYSIS.txt  build.rs
testbox/GLM/task-queue-broker/proto/: task_queue.proto
testbox/GLM/task-queue-broker/src/: api.rs  auth.rs  broker.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  raft_node.rs  storage.rs  worker_manager.rs
testbox/GLM/task-queue-client/: Cargo.toml  build.rs
testbox/GLM/task-queue-client/src/: async.rs  async_client.rs  blocking.rs  connection.rs  error.rs  lib.rs
testbox/GLM/task-queue-core/: Cargo.toml
testbox/GLM/task-queue-core/src/: error.rs  lib.rs  message.rs  priority.rs  protocol.rs  serde.rs  task.rs  types.rs
testbox/GLM/task-queue-persistence/: Cargo.toml
testbox/GLM/task-queue-persistence/src/: lib.rs
testbox/GLM/task-queue-raft/: ABSOLUTE_FINAL.txt  COMPLETION_REPORT.md  COMPLETION_STATUS.txt  Cargo.toml  DEFINITIVE_STATUS.md  FINAL_ANSWER.txt  FINAL_REPORT.md  FINAL_SUMMARY.txt  FINAL_VERIFICATION.md  IMPLEMENTATION.md  RAFT.md  SIMPLE_STATUS.txt  ULTIMATE_VERIFICATION.txt  VERIFICATION.md  final_check.sh  verify_all.sh
testbox/GLM/task-queue-raft/src/: lib.rs  log.rs  node.rs  raft.rs  state_machine.rs
testbox/GLM/task-queue-raft/tests/: integration_test.rs
testbox/GLM/task-queue-worker/: Cargo.toml
testbox/GLM/task-queue-worker/src/: client.rs  config.rs  handler.rs  lib.rs  main.rs  worker.rs
testbox/haiku/: CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.worker  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  INDEX.md  Makefile  PROJECT_SUMMARY.md  README.md  VERIFICATION.txt  config.example.yml  docker-compose.yml  prompt.md
testbox/haiku/crates/task-queue-broker/: Cargo.toml
testbox/haiku/crates/task-queue-broker/src/: api.rs  broker.rs  lib.rs  main.rs  message_handler.rs  persistence.rs  priority_queue.rs  rocksdb_persistence.rs  worker_registry.rs
testbox/haiku/crates/task-queue-cli/: Cargo.toml
testbox/haiku/crates/task-queue-cli/src/: commands.rs  lib.rs  main.rs
testbox/haiku/crates/task-queue-client/: Cargo.toml
testbox/haiku/crates/task-queue-client/src/: async_client.rs  lib.rs  sync_client.rs
testbox/haiku/crates/task-queue-core/: Cargo.toml
testbox/haiku/crates/task-queue-core/src/: error.rs  lib.rs  message.rs  priority.rs  serialization.rs  task.rs
testbox/haiku/crates/task-queue-core/tests/: integration_test.rs
testbox/haiku/crates/task-queue-web-ui/: Cargo.toml
testbox/haiku/crates/task-queue-web-ui/src/: handlers.rs  lib.rs  main.rs  server.rs  templates.rs
testbox/haiku/crates/task-queue-web-ui/templates/: index.html
testbox/haiku/crates/task-queue-worker/: Cargo.toml
testbox/haiku/crates/task-queue-worker/src/: executor.rs  heartbeat.rs  lib.rs  main.rs  retry.rs  task_handler.rs  worker.rs
testbox/haiku/docs/: api.md  architecture.md
testbox/haiku/monitoring/: prometheus.yml
testbox/sonnet/: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  Makefile  PROJECT_SUMMARY.md  README.md  config.example.yaml  docker-compose.yml  prometheus.yml
testbox/sonnet/crates/task-queue-admin/: Cargo.toml
testbox/sonnet/crates/task-queue-admin/src/: main.rs
testbox/sonnet/crates/task-queue-broker/: Cargo.toml
testbox/sonnet/crates/task-queue-broker/src/: api.rs  broker.rs  config.rs  lib.rs  main.rs  metrics.rs  queue.rs  worker_registry.rs
testbox/sonnet/crates/task-queue-client/: Cargo.toml
testbox/sonnet/crates/task-queue-client/src/: async_client.rs  lib.rs  sync_client.rs
testbox/sonnet/crates/task-queue-core/: Cargo.toml
testbox/sonnet/crates/task-queue-core/src/: error.rs  lib.rs  priority.rs  task.rs
testbox/sonnet/crates/task-queue-persistence/: Cargo.toml
testbox/sonnet/crates/task-queue-persistence/src/: lib.rs  store.rs  wal.rs
testbox/sonnet/crates/task-queue-protocol/: Cargo.toml
testbox/sonnet/crates/task-queue-raft/: Cargo.toml
testbox/sonnet/crates/task-queue-worker/: Cargo.toml
testbox/sonnet/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
testbox/sonnet/examples/: async_client.rs  custom_worker.rs  simple_client.rs
(+271 files in other folders)
