[workspace]
members = [
    "task-queue-core",
    "task-queue-broker",
    "task-queue-worker",
    "task-queue-client",
    "task-queue-admin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Task Queue Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/task-queue"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rocksdb = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-prometheus = "0.14"
prometheus = "0.13"
axum = { version = "0.7", features = ["ws", "macros"] }
tonic = "0.10"
prost = "0.12"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
hyper = "1.0"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
futures = "0.3"
serde_yaml = "0.9"
async-trait = "0.1"
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
rustls = "0.23"
rustls-pemfile = "2.0"
rcgen = "0.12"
rand = "0.8"
proptest = "1.4"
quickcheck = "1.0"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
