[workspace]
members = [
    "task-queue-core",
    "task-queue-persistence",
    "task-queue-broker",
    "task-queue-worker",
    "task-queue-client",
    "task-queue-admin",
    "task-queue-api",
    "task-queue-raft",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Task Queue Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/distributed-task-queue"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rocksdb = "0.22"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
prometheus = { version = "0.13", features = ["process"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }
bcrypt = "0.15"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"
bincode = "1.3"
proptest = "1.4"
quickcheck = "1.0"
ratelimit = "0.9"
lru = "0.12"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
base64 = "0.21"
tokio-util = { version = "0.7", features = ["codec"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
