[workspace]
members = [
    "crates/task-queue-core",
    "crates/task-queue-broker",
    "crates/task-queue-worker",
    "crates/task-queue-client",
    "crates/task-queue-admin",
    "crates/task-queue-persistence",
    "crates/task-queue-raft",
    "crates/task-queue-protocol",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Task Queue Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
rocksdb = "0.22"

# Network/API
axum = { version = "0.7", features = ["ws"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.9"
dashmap = "6.1"
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"

# Config
serde_yaml = "0.9"
config = "0.14"

# Monitoring
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Security
bcrypt = "0.16"
rustls = "0.23"
tokio-rustls = "0.26"

# Raft consensus
raft = "0.7"
raft-proto = "0.7"
protobuf = "3.6"

# Testing
proptest = "1.6"
criterion = "0.5"
tempfile = "3.14"

# Rate limiting
governor = "0.7"

# Additional utilities
base64 = "0.22"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
once_cell = "1.20"
