[package]
name = "task-queue-api"
version.workspace = true
edition.workspace = true

[dependencies]
task-queue-core = { path = "../task-queue-core" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
prometheus = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
