[package]
name = "task-queue-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tq-broker"
path = "src/main.rs"

[dependencies]
task-queue-core = { path = "../task-queue-core" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-prometheus.workspace = true
prometheus.workspace = true
rocksdb.workspace = true
axum.workspace = true
tonic.workspace = true
prost.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
config.workspace = true
serde_yaml = "0.9"
clap.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true
rand.workspace = true

# Raft dependencies
openraft = { version = "0.8", features = ["serde"] }
async-std = { version = "1.12", features = ["attributes"] }

[build-dependencies]
tonic-build = "0.10"
