[package]
name = "task-queue-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
task-queue-core = { path = "../task-queue-core" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
bytes.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
