[package]
name = "task-queue-raft"
version.workspace = true
edition.workspace = true

[dependencies]
task-queue-core = { path = "../task-queue-core" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
fastrand = "2.0"
