[package]
name = "task-queue-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tq-worker"
path = "src/main.rs"

[dependencies]
task-queue-core = { path = "../task-queue-core" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
async-trait.workspace = true
clap.workspace = true
rand.workspace = true
gethostname = "0.4"
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.8"
