[package]
name = "task-queue-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tq-worker"
path = "src/main.rs"

[dependencies]
task-queue-core = { path = "../task-queue-core" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
prometheus = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
gethostname = "0.5"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["codec"] }
serde_json = { workspace = true }
