[package]
name = "task-queue-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
task-queue-core = { path = "../task-queue-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "tq-broker"
path = "src/main.rs"
