[package]
name = "task-queue-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
task-queue-core = { path = "../task-queue-core" }
task-queue-client = { path = "../task-queue-client" }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "tq-admin"
path = "src/main.rs"
