[package]
name = "task-queue-web-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
task-queue-core = { path = "../task-queue-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
askama = "0.12"
