[package]
name = "task-queue-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
task-queue-core = { path = "../task-queue-core" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }

[[bin]]
name = "tq-worker"
path = "src/main.rs"
