[package]
name = "task-queue-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
task-queue-core = { path = "../task-queue-core" }
tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
rand = "0.8"
gethostname = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "tq-worker"
path = "src/bin/worker.rs"
