[package]
name = "task-queue-admin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tq-admin"
path = "src/main.rs"

[dependencies]
task-queue-core = { path = "../task-queue-core" }
task-queue-client = { path = "../task-queue-client" }

tokio = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
