[package]
name = "task-queue-broker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tq-broker"
path = "src/main.rs"

[dependencies]
task-queue-core = { path = "../task-queue-core" }
task-queue-protocol = { path = "../task-queue-protocol" }
task-queue-persistence = { path = "../task-queue-persistence" }
task-queue-raft = { path = "../task-queue-raft" }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }

dashmap = { workspace = true }
parking_lot = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# HTTP/API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Metrics
prometheus = { workspace = true }

# TLS
rustls = { workspace = true }
tokio-rustls = { workspace = true }

# Rate limiting
governor = { workspace = true }
