[package]
name = "task-queue-client"
version.workspace = true
edition.workspace = true

[dependencies]
task-queue-core = { path = "../task-queue-core" }
task-queue-protocol = { path = "../task-queue-protocol" }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

dashmap = { workspace = true }
parking_lot = { workspace = true }
