[package]
name = "task-queue-persistence"
version.workspace = true
edition.workspace = true

[dependencies]
task-queue-core = { path = "../task-queue-core" }
rocksdb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
