[package]
name = "task-queue-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
task-queue-core = { path = "../task-queue-core" }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
