[package]
name = "task-queue-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tq-worker"
path = "src/main.rs"

[dependencies]
task-queue-core = { path = "../task-queue-core" }
task-queue-protocol = { path = "../task-queue-protocol" }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# System info
sysinfo = "0.31"
hostname = "0.4"
